<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sellerId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seller_Profile">

    <LinearLayout
        android:id="@+id/Seller_Profile"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="@color/white"
            android:text="@string/seller_name"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sellerEmail"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="@color/white"
            android:text="@string/seller_email"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/userAddress"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="@color/white"
            android:text="@string/address"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sellerMenu"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="@color/white"
            android:text="@string/menu"
            android:onClick="clickMenu"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sellerOrders"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="@color/white"
            android:text="@string/order"
            android:onClick="viewOrders"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sellerWallet"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:backgroundTint="@color/white"
            android:text="@string/wallet"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/userLogoff"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:backgroundTint="@color/white"
            android:text="@string/logoff"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/Home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:backgroundTint="@color/white"
            android:onClick="clickHome"
            android:text="Home"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:backgroundTint="@color/white"
            android:onClick="clickMenu"
            android:text="Menu"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:backgroundTint="@color/white"
            android:text="Order"
            android:onClick="viewOrders"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Account_Profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:backgroundTint="@color/white"
            android:onClick="clickAccount"
            android:text="Account"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>