<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideOverlay"
    tools:context=".User_Profile">

    <LinearLayout
        android:id="@+id/User_Profile"
        android:layout_width="410dp"
        android:layout_height="635dp"
        android:layout_weight="0.5"
        android:isScrollContainer="true"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/white"
            android:text="@string/user_name"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/white"
            android:text="@string/user_email"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/userPhone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/white"
            android:text="@string/phone"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/userAddress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/white"
            android:text="@string/address"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/userOrder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/white"
            android:text="@string/order"
            android:onClick="clickOrder"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/userCaffeine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/white"
            android:text="@string/caffeine"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/userLogoff"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/white"
            android:text="@string/logoff"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/Home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:backgroundTint="@color/white"
            android:onClick="clickHome"
            android:text="Home"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Cart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:backgroundTint="@color/white"
            android:onClick="clickCart"
            android:text="Cart"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:backgroundTint="@color/white"
            android:text="Order"
            android:onClick="clickOrder"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Account_Profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:backgroundTint="@color/white"
            android:onClick="clickAccount"
            android:text="Account"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>