...
            android:layout_height="398dp"
            android:padding="20dp"
            android:text="Revenue: "
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/function"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_below="@id/map">

            <Button
                android:id="@+id/Home"
...
